<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--<LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_home_toolbar" >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:src="@drawable/ic_baseline_keyboard_backspace_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>-->
            <LinearLayout
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rlSelectVideo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@color/MainTextColor">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:fontFamily="@font/manrope_semibold"
                    android:gravity="center"
                    android:padding="@dimen/dimen_8dp"
                    android:text="@string/lbl_select_video"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dimen_20dp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_80dp"
                android:hint="@string/lbl_title"
                android:textColorHint="@color/MainTextColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectLang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:fontFamily="@font/manrope_regular"
                android:gravity="center"
                android:padding="@dimen/dimen_8dp"
                android:text="@string/lbl_select_title"
                android:textColor="@color/MainTextColor"
                android:textSize="@dimen/dimen_20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:fontFamily="@font/manrope_regular"
                android:gravity="center"
                android:padding="@dimen/dimen_8dp"
                android:text="@string/lbl_select_category"
                android:textColor="@color/MainTextColor"
                android:textSize="@dimen/dimen_20dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDone"
                    android:layout_width="170dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_12dp"
                    android:textColor="@color/MainTextColor"
                    android:background="@drawable/gediant_bg"
                    android:fontFamily="@font/manrope_semibold"
                    android:text="Upload"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>