<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/homeDrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="end">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_collapseMode="parallax">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/action_bar_height"
                                android:background="@drawable/bg_home_toolbar"
                                android:gravity="center_vertical"
                                android:paddingStart="@dimen/dimen_8dp"
                                android:paddingEnd="@dimen/dimen_8dp">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/ivMenu"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentStart="true"
                                    android:paddingStart="@dimen/dimen_8dp"
                                    android:paddingEnd="@dimen/dimen_8dp"
                                    android:src="@drawable/icn_menu" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tvHead"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toStartOf="@id/ivsearch"
                                    android:layout_toEndOf="@id/ivMenu"
                                    android:text="@string/app_name"
                                    android:textSize="@dimen/dimen_14sp" />

                                <!--  <androidx.appcompat.widget.AppCompatImageView
                                      android:layout_width="wrap_content"
                                      android:layout_height="match_parent"
                                      android:layout_toStartOf="@id/ivsearch"
                                      android:paddingStart="@dimen/dimen_6dp"
                                      android:paddingEnd="@dimen/dimen_6dp"
                                      android:src="@drawable/icn_upload" />-->

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/ivsearch"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentEnd="true"
                                    android:paddingStart="@dimen/dimen_6dp"
                                    android:paddingEnd="@dimen/dimen_6dp"
                                    android:src="@drawable/icn_search" />

                            </RelativeLayout>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/manrope_light"
                                android:padding="@dimen/dimen_12dp"
                                android:text="@string/lbl_categories"
                                android:textColor="@color/White"
                                android:textSize="@dimen/dimen_14sp" />

                            <include layout="@layout/view_line" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvCategories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/dimen_14dp"
                            android:paddingEnd="@dimen/dimen_14dp" />

                    </LinearLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:visibility="gone"
                        app:layout_collapseMode="pin" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtVideos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_light"
                    android:padding="@dimen/dimen_12dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/lbl_videos"
                    android:textColor="@color/White"
                    android:textSize="@dimen/dimen_14sp" />

                <include layout="@layout/view_line" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtVideos"
                    android:clipToPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvVideos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:layout_marginBottom="@dimen/dimen_8dp" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ivUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/gediant_bg"
                    android:src="@drawable/ic_baseline_add_24" />

            </RelativeLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/homeNavigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/bg_category"
            android:fitsSystemWindows="true"
            app:itemTextColor="@color/MainTextColor" />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>